--- a/css/public.css
+++ b/css/public.css
@@ -346,7 +346,7 @@ slide .cli {
 
 slide .cli:nth-child(3) {
 	margin-top: 60px;
-	background: #FF9232;
+	background: none;
 }
 
 slide .cli div {
@@ -444,14 +444,22 @@ slide .cli .tanchu span {
 	letter-spacing: 1px;
 	padding: 22px 0;
 }
-
+slide ul li:nth-child(3) div{
+	margin-bottom: 20px;
+	background: #FF9232;
+}
 @media (min-width:992px) {
 	slide li:last-child {}
 	slide li:last-child a {
 		display: block;
-		background: #FF9232;
+		/*background: #FF9232;*/
 		color: white;
-		padding: 25px 0;
+	}
+	slide ul li:nth-child(3) div:nth-child(2) a {
+		display: block;
+		/*background: #FF9232;*/
+		color: white;
+		padding: 20px 0;
 	}
 	.bigtan {
 		display: none;
@@ -667,9 +675,9 @@ slide .cli .tanchu span {
 	slide li:nth-child(3){
 		position: fixed;
 		right: 0;
-		top: 30%;
+		top: 33%;
 		line-height: 20px;
-		padding: 15px 0;
+		padding: 10px 0;
 		width: 80px;
 		
 	}
@@ -688,7 +696,7 @@ slide .cli .tanchu span {
 	slide li:nth-child(4){
 		position: fixed;
 		right: 0;
-		top: 46%;
+		top: 50%;
 		line-height: 80px;
 		width: 80px;
 		height: 80px;
@@ -698,5 +706,11 @@ slide .cli .tanchu span {
 	}
 	slide li:nth-child(4) a{
 		color: white;
+	}
+	slide ul li:nth-child(3) div:nth-child(2) a {
+		display: block;
+		/*background: #FF9232;*/
+		color: white;
+		padding: 20px 0;
 	}	
 }
