--- a/css/about.css
+++ b/css/about.css
@@ -1,13 +1,13 @@
 .banner{
-	
+	min-width: 1200px;
 }
 .banner img{
 	display: block;
 }
 .official{
-	max-width:70%;
+	width: 1500px;
 	margin: auto;
-	padding: 5% 0;
+	padding: 5% 50px;
 }
 .official p{
 	font-size: 20px;
@@ -23,22 +23,6 @@
 .official p:nth-child(n+5){
 	font-weight: bold;
 	text-indent: 0;
-}
-@media (max-width:992px) {
-	.official{
-		max-width:95%;
-	}
-	.official p{
-		font-size: 14px;
-		margin-bottom: 15px;
-		letter-spacing: 1px;
-		line-height: 24px;
-	}
-	
-	.official p:nth-child(n+5){
-		font-weight: bold;
-		text-indent: 0;
-	}
 }
 
 
