--- a/css/public.css
+++ b/css/public.css
@@ -49,11 +49,14 @@ img {
 
 /*导航*/
 
-header {}
+header {
+	width: 1200px;
+	margin: auto;
+}
 
 header nav {
-	max-width: 1200px;
-	margin: auto;
+	width: 1200px;
+	
 	padding: 20px 0;
 }
 
@@ -116,122 +119,17 @@ header nav ul li:last-child button {
 	margin-top: 7px;
 }
 
-@media (min-width:992px) {
-	header>img {
-		display: none;
-	}
-	header>a {
-		display: none;
-	}
-}
 
-@media (max-width:992px) {
-	header .menu,
-	header ul,
-	header .logo {
-		display: none;
-	}
-	header {
-		position: relative;
-	}
-	header>a {
-		position: absolute;
-		right: 10px;
-		top: 0.8rem;
-		color: #63AAE1;
-		font-size: 14px;
-	}
-	header nav {
-		padding: 0;
-	}
-	/*header nav ul {
-	margin-right:0;
-}
-	header nav .logo {
-		float: left;
-		vertical-align: middle;
-		width:120px;
-		margin-top: 6px;
-		margin-left: 10px;
-	}
-	header nav {
-		padding: 0 0;
-		position: relative;
-	}
-	header nav .menu {
-		float: right;
-		border: 2px solid #666666;
-		border-radius: 6px;
-		padding-bottom: 7px;
-		margin-right: 10px;
-		margin-top: 5px;
-	}
-	header nav .menu span {
-		display: block;
-		border-bottom: 2px solid #666666;
-		width: 20px;
-		margin: 0 8px;
-		margin-top: 6px;
-	}
-	header nav ul {
-		position: absolute;
-		left: 0;
-		top: 100%;
-		right: 0;
-		float: none;
-		background: white;
-		vertical-align: middle;
-		z-index: 99999;
-		background: rgba(0, 0, 0, 0.8);
-	}
-	header nav ul li {
-		float: none;
-	}
-	header nav ul li a {
-		display: block;
-		padding: 5px 25px;
-		margin-top: 10px;
-		font-size: 16px;
-		color: #BBBBBB;
-	}
-	header nav ul li a.active {
-		border-bottom: 2px solid white;
-		color: white;
-	}
-	header nav ul li:last-child{
-	position: initial;
-	margin-left:20px;
-}
-	header nav ul li:last-child button{
-		margin-left: 0;
-		background: none;
-		color: #BBBBBB;
-		border-radius: 10px;
-		font-size: 16px;
-		padding: 5px 10px 5px 5px;
-		margin-top: 7px;
-	}
-	header nav ul li:last-child p{
-	position: fixed;
-	z-index: 99999;
-	left: 50%;
-	width: 200px;
-	top: 20%;
-	transform: translateX(-50%);
-	display: none;
-}*/
-}
 
 
 /*底部*/
-
-@media (min-width:992px) {
 	footer {
+		min-width: 1200px;
 		background: #334259;
 		padding: 50px 0;
 	}
 	footer>div {
-		max-width: 1200px;
+		width: 1200px;
 		margin: auto;
 		color: white;
 	}
@@ -243,6 +141,7 @@ header nav ul li:last-child button {
 	}
 	footer>div ul li p {
 		padding: 30px 0;
+		margin-right: 10px;
 	}
 	footer>div ul li p span {
 		color: white;
@@ -275,53 +174,6 @@ header nav ul li:last-child button {
 	footer>div div:nth-child(3) {
 		text-align: center;
 	}
-}
-
-
-/*@media (max-width:992px) {
-	footer {
-		padding: 15px 10px;
-	}
-	footer>div ul li {
-		float: left;
-		width: 33%;
-		text-align: right;
-		font-size: 12px;
-	}
-	footer>div ul li p {
-		padding:10px 0;
-	}
-	footer>div ul li p span {
-		color: white;
-		display: block;
-	}
-	footer>div ul li:nth-child(1) {
-		background: url(../images/footer1.png) no-repeat 40% center;
-		background-size: 20% auto;
-	}
-	footer>div ul li:nth-child(2) {
-		background: url(../images/footer2.png) no-repeat 40% center;
-		background-size: 20% auto;
-	}
-	footer>div ul li:nth-child(3) {
-		background: url(../images/footer3.png) no-repeat 40% center;
-		background-size: 20% auto;
-	}
-	footer>div ul li:nth-child(4) {
-		background: url(../images/footer4.png) no-repeat 40% center;
-		background-size: 20% auto;
-	}
-	footer>div ul li:nth-child(5) {
-		background: url(../images/footer5.png) no-repeat 40% center;
-		background-size: 20% auto;
-	}
-}*/
-
-@media (max-width:992px) {
-	footer {
-		display: none;
-	}
-}
 
 
 /*<!--		侧边栏-->*/
@@ -454,12 +306,10 @@ slide ul li:nth-child(3) div{
 	slide li:last-child {}
 	slide li:last-child a {
 		display: block;
-		/*background: #FF9232;*/
 		color: white;
 	}
 	slide ul li:nth-child(3) div:nth-child(2) a {
 		display: block;
-		/*background: #FF9232;*/
 		color: white;
 		padding: 20px 0;
 	}
@@ -469,278 +319,4 @@ slide ul li:nth-child(3) div{
 	slide .four{
 		display: none;
 	}
-}
-
-@media (max-width:992px) {
-	body {
-		padding-bottom: 50px;
-	}
-	slide {
-		right: 0;
-		left: 0;
-		bottom: 0;
-		top: auto;
-	}
-	slide ul {
-		position: relative;
-	}
-	slide ul li {
-		float: left;
-		width: 50%;
-		height: 50px;
-		line-height: 50px;
-	}
-	slide .cli {
-		margin-bottom: 0;
-		font-size: 12px;
-	}
-	slide .cli div {
-		padding: 0;
-		position: initial;
-	}
-	slide .cli:nth-child(3) {
-		margin-top: 0;
-		background: #FF9232;
-	}
-	slide ul li:nth-child(1) img {
-		width: 25px;
-		height: 20px;
-		margin-bottom: 3px;
-		margin-top: 5px;
-	}
-	slide ul li:nth-child(2) {
-		margin-top: 0;
-	}
-	/*slide ul li:nth-child(3) a {
-		color: white;
-		font-size: 18px;
-	}*/
-	slide ul li:nth-child(1) .tanchu {
-		display: none;
-	}
-	slide ul li:nth-child(2) img {
-		display: block;
-		width: 25px;
-		height: 20px;
-		margin: auto;
-		margin-bottom: 6px;
-		margin-top: 5px;
-	}
-	slide ul li:nth-child(3) a {
-		font-size: 14px;
-	}
-	slide ul li:nth-child(3) a img {
-		display: block;
-		width: 20px;
-		height: 20px;
-		margin: auto;
-		margin-bottom: 5px;
-		margin-top: 5px;
-	}
-	slide .cli .erweima {
-		right: 0;
-		top: auto;
-		left: 0;
-		bottom: 100%;
-		width: 100px;
-		height: 100px;
-		display: none;
-	}
-	slide .cli .erweima.active {
-		/*display: block;*/
-	}
-	slide .cli .tanchu {
-		position: absolute;
-		right: 0%;
-		left: 0;
-		bottom: 100%;
-		top: auto;
-		border-bottom: 1px solid #999999;
-	}
-	slide .cli .tanchu.active {
-		display: block;
-	}
-	slide ul li:nth-child(1) .tanchu.active {
-		display: none;
-	}
-	slide .cli .tanchu span {
-		display: inline-block;
-		vertical-align: middle;
-		width: auto;
-		font-size: 20px;
-		letter-spacing: 1px;
-		padding: 0;
-	}
-	slide ul li:nth-child(1) img:nth-child(4) {
-		position: fixed;
-		top: 60%;
-		left: 50%;
-		width: 60%;
-		height: auto;
-		margin-bottom: 0;
-		margin-top: 0;
-		transform: translate(-50%, -50%);
-		display: none;
-	}
-	slide ul li:nth-child(1) img:nth-child(4).active {
-		display: block;
-	}
-	slide ul li:nth-child(1) p:nth-child(5) {
-		position: fixed;
-		right: 0;
-		top:0;
-		left: 0;
-		bottom: 0;
-		z-index: 99999;
-		display: none;
-		background: rgba(0,0,0,0.3);
-	}
-	slide ul li:nth-child(1) p:nth-child(5) img{
-		width: 80%;
-		height: 70%;
-		margin-top: 20%;
-	}
-	slide ul li:nth-child(1) p:nth-child(5).active {
-		display: block;
-	}
-	slide ul li:nth-child(1) {
-		background: #ED4420;
-	}
-	slide ul li:nth-child(2) img {
-		display: inline-block;
-		vertical-align: middle;
-	}
-	
-	slide ul li p:nth-child(2) {
-		display: inline-block;
-		vertical-align: middle;
-	}
-	slide ul li:nth-child(1) img {
-		vertical-align: middle;
-	}
-	slide ul li p:nth-child(1) {
-		vertical-align: middle;
-	}
-	slide ul li:nth-child(2) .tanchu {
-		display: none;
-	}
-	slide ul li:nth-child(2) .tanchu.active {
-		display: none;
-	}
-	slide ul li:nth-child(2) .three.active{
-		display: none;
-	}
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	.bigtan{
-		display: none;
-		position: fixed;
-		left: 0;
-		right: 0;
-		top: 0;
-		bottom: 0;
-		background: rgba(0,0,0,0.3);
-		z-index: 99999;
-	}
-	.bigtan.active{
-		display: block;
-	}
-	.bigtan.retive{
-		display: block;
-		opacity: 0;
-	}
-	.bigtan .mobelcl {
-		position: fixed;
-		z-index: 99999;
-		width: 80%;
-		margin: auto;
-		left: 50%;
-		top: 50%;
-		background: white;
-		transform: translate(-50%,-50%);
-		font-size: 14px;
-		text-align: center;
-		padding: 1rem 0 0 0;
-		border-radius:8px;
-	}
-	.bigtan .mobelcl p:nth-child(1){
-		font-size: 16px;
-		font-weight: bold;
-		margin-bottom:5px;
-	}
-	.bigtan .mobelcl p:nth-child(2){
-		font-size: 14px;
-		margin-bottom:0;
-		padding-bottom: 5px;
-		border-bottom: 1px solid #E3ECF2;
-		letter-spacing: 0.05rem;
-	}
-	.bigtan .mobelcl p:nth-child(3){
-		padding: 0.8rem 0;
-		position: relative;
-		
-	}
-	.bigtan .mobelcl p:nth-child(3):before{
-		content: "";
-		position: absolute;
-		left: 50%;
-		top: 0;
-		bottom: 0;
-		height: 100%;
-		width: 1px;
-		background: #E3ECF2;
-	}
-	.bigtan .mobelcl p:nth-child(3) a{
-		margin: 0 2rem;
-		color: #63AAE1;
-		font-size: 16px;
-	}
-	slide li:nth-child(3){
-		position: fixed;
-		right: 0;
-		top: 33%;
-		line-height: 20px;
-		padding: 10px 0;
-		width: 80px;
-		
-	}
-	slide .cli .tanchu span{
-		display: none;
-	}
-	slide .cli:nth-child(2) .tanchu span.active{
-		display: none;
-	}
-	/*slide ul li:nth-child(4){
-		display: none;
-	}*/
-	slide .cli:nth-child(3) .tanchu.active{
-		display: none;
-	}
-	slide li:nth-child(4){
-		position: fixed;
-		right: 0;
-		top: 50%;
-		line-height: 80px;
-		width: 80px;
-		height: 80px;
-		background: #FF9232;
-		color: white;
-		font-size: 14px;
-	}
-	slide li:nth-child(4) a{
-		color: white;
-	}
-	slide ul li:nth-child(3) div:nth-child(2) a {
-		display: block;
-		/*background: #FF9232;*/
-		color: white;
-		padding: 20px 0;
-	}	
 }
